--- a/src/Client/Public/Contactanos/Contactanos.css
+++ b/src/Client/Public/Contactanos/Contactanos.css
@@ -15,10 +15,11 @@ a {
     font-size: 30px;
     text-align: center;
     margin-bottom: 25px;
-    color: #008AAE;
+    color: #328f5d;
 }
 
 .contenido {
+    padding: 8px;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
@@ -46,7 +47,7 @@ a {
 }
 
 .info .col .icono {
-    color: #008AAE;
+    color: #328f5d;
     margin-right: 10px;
 }
 
@@ -66,7 +67,7 @@ a {
     display: flex;
     width: 40px;
     height: 40px;
-    background: #008AAE;
+    background: #328f5d;
     color: #fff;
     margin: 5px;
     justify-content: center;
